kubernetesManifest/pancaapp/php-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: portfolio
spec:
  selector:
    app: php-apache
  ports:
    - port: 80
      targetPort: 80
      
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  namespace: portfolio
spec:
  replicas: 5
  selector:
    matchLabels:
      app: php-apache
  template:
    metadata:
      labels:
        app: php-apache
    spec:
      containers:
        - name: php-apache
          image: docker.io/pancaperkasa87/php-panca:v2
          ports:
            - containerPort: 80
