kubernetesManifest/pancaapp/php-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-apache
  namespace: portfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: perkasa.panca.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-apache
                port:
                  number: 80
